Revert "change thread poll -> StructuredTaskScope, enable preview futures"
This reverts commit ba3a5632dc5ecd2f3fca4d3a28a4c4193d409749.